# Harpe-client

./: .gitignore  README.md  requirement.txt
CodeBlocks/CodeBlocks/: client.cbp  client.depend  client.layout  config.ini
harpe-client/: CMakeLists.txt  Makefile  bugs.txt  harpe-client  run.sh
harpe-client/doc/: Doxyfile
harpe-client/include/client/: functions.hpp  models.hpp
harpe-client/include/harpe-client/: defines.hpp  defines.hpp.in  functions.hpp  models.hpp
harpe-client/src/: Makefile
harpe-client/src/client/: functions.cpp  main.cpp  models.cpp
harpe-client/src/harpe-client/: CMakeLists.txt  functions.cpp  main.cpp  models.cpp  patcher.cpp
